TFP-1937 fikset utregning av trekkdager ved overlapp med annenpart i tapende behandlinger